<resources>
    <string name="app_name">Octopus</string>
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="settings">Ustawienia</string>
    <string name="push_notify">Powiadomienia push</string>
    <string name="theme">Motyw</string>
    <string name="language">Język</string>
    <string name="schedule">Grafik</string>
    <string name="homepage">Strona główna</string>
    <string-array name="themes_array">
        <item>Domyślny</item>
        <item>Jasny</item>
        <item>Ciemny</item>
    </string-array>
    <string-array name="statistics_types">
        <item>Uczestnicy</item>
        <item>Użytkownicy</item>
        <item>Rezerwacje</item>
    </string-array>
    <string-array name="rooms_array">
        <item>Mała Sala</item>
        <item>Duża Sala</item>
    </string-array>
    <string name="Small_room">Mała Sala</string>
    <string name="Large_room">Duża Sala</string>
    <string-array name="days_of_week">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>
    <string-array name="class_types_array">
        <item>MMA</item>
        <item>Boks</item>
        <item>Kick-boxing</item>
        <item>Zapasy</item>
        <item>No-Gi</item>
        <item>BJJ</item>
        <item>Wolna Mata</item>
    </string-array>

    <string-array name="group_levels_array">
        <item>początkująca</item>
        <item>kids (6 - 12 lat)</item>
        <item>junior (12 - 16 lat)</item>
        <item>family</item>
        <item>średnio - zaawansowana</item>
        <item>zaawansowana</item>
        <item>pro</item>
        <item>łączona</item>
        <item>sparingi</item>
    </string-array>
    <string-array name="item_types">
        <item>Sprzęt</item>
        <item>Ubranie</item>
        <item>Akcesoria</item>
    </string-array>
    <string-array name="item_type_options">
        <item>Dziecięcy</item>
        <item>Dorosły - Damski</item>
        <item>Dorosły - Męski</item>
    </string-array>

    <string-array name="item_size_options">
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>
    <string-array name="payment_methods">
        <item>Gotówka</item>
    </string-array>
    <string name="Login">Logowanie</string>
    <string name="Login2">Zaloguj się!</string>
    <string name="Logintoregister">Nie masz u nas konta? Zarejestruj się tutaj</string>
    <string name="Name">Imię</string>
    <string name="Sign_up">Rejestracja</string>
    <string name="Sign_up2">Zarejestruj się!</string>
    <string name="Username">Nazwa użytkownika</string>
    <string name="Registertologin">Jesteś już użytkownikiem? Zaloguj się!</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="Hello_user">Witaj, gościu!</string>
    <string name="Hello_user_main">Witaj w aplikacji Octopus, użytkowniku!</string>
    <string name="Close_schedule">Najbliższe zajęcia</string>
    <string name="reservation">Rezerwacje</string>
    <string name="trainers">Nasi trenerzy</string>
    <string name="Prices">Cennik</string>
    <string name="Check_availability">Sprawdź dostępność</string>
    <string name="My_reservations">Moje rezerwacje</string>
    <string name="Price">Cena</string>
    <string name="Color">Kolor</string>
    <string name="Size">Rozmiar</string>
    <string name="Quantity">Ilość</string>
    <string name="Training_type">Płaszczyzna treningu</string>
    <string name="Group_level">Poziom zaawansowania</string>
    <string name="Groups">Zajęcia</string>
    <string name="List_trainers">Lista trenerów</string>
    <string name="Date_trainers">Data treningu</string>
    <string name="Pick_date">Wybierz datę</string>
    <string name="Available_hours">Dostępne godziny</string>
    <string name="Reserve_training">Zarezerwuj trening</string>
    <string name="Contact">Kontakt</string>
    <string name="Your_notifications">Twoje powiadomienia</string>
    <string name="You_have_questions">Masz pytania? Skontaktuj się z nami!</string>
    <string name="Contact_number"> Numer kontaktowy</string>
    <string name="polish">Polski</string>
    <string name="english">English</string>
    <string name="ukrainian">Українська</string>
        <item name="nav_logout" type="id"/>
    <string name="payment_prompt">Opcja płatności</string>
</resources>