<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/octopus_background3">

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Powiadomienia -->
    <TextView
        android:id="@+id/tv_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push_notify"
        android:textColor="@color/white"
        android:visibility = "gone"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/tv_notifications"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Motyw -->
    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_notifications"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <Spinner
        android:id="@+id/spinner_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toTopOf="@id/tv_theme"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <!-- Język -->
    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_theme"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toTopOf="@id/tv_language"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
